src/viberank/ParsingLocally/logsParse/parse_5072649.err
  File "/projects/simlai1/Viberank/VibeRank/src/viberank/ParsingLocally/parse_responses.py", line 12
    MODEL_NAME = "meta-llama/Meta-Llama-3-8B-Instruct""
                                                      ^
SyntaxError: unterminated string literal (detected at line 12)
